# market-analytics-platform

./: .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py  database_sync.py
app/models/: job.py  price_history.py
app/services/: analysis_service.py  market_client.py
app/workers/: celery_app.py  tasks.py
backend/: Dockerfile  pyproject.toml
backend/app/api/: routes.py
backend/app/core/: config.py  database_async.py  database_sync.py
backend/app/models/: analysis_result.py  enums.py  job.py
backend/app/services/: analysis_service.py  market_client.py  price_data_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/general_tests/: conftest.py  test_analysis.py  test_parser.py  test_routes.py  test_worker_logic.py
backend/tests/integration_tests/: conftest.py  test_api_flow.py
backend/tests/mocks/mock_binance/: app.py
cli/: api.py  config.py  main.py  pyproject.toml
cli/cli_tool/: api.py  main.py
docker/: Dockerfile
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: PriceChart.jsx
frontend/src/constants/: jobStatus.js
frontend/src/pages/: Analysis.jsx  Analytics.jsx  Dashboard.jsx
