[tool.poetry]
name = "market-analytics-platform"
version = "0.1.0"
description = ""
authors = ["David Kedra <63604382+Darbix@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.129.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
httpx = "^0.28.1"
redis = "^7.2.0"
kafka-python = "^2.3.0"
celery = "^5.6.2"
clickhouse-connect = "^0.11.0"
elasticsearch = "^9.3.0"
pydantic-settings = "^2.13.0"
sqlalchemy = "^2.0.46"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
numpy = "^2.4.2"
pandas = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
