[tool.poetry]
name = "market-api"
version = "0.1.0"
description = "Backend API service"
authors = ["David Kedra <63604382+Darbix@users.noreply.github.com>"]

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = "^0.129.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
httpx = "^0.28.1"
redis = "^7.2.0"
celery = "^5.6.2"
pydantic-settings = "^2.13.0"
sqlalchemy = "^2.0.46"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
numpy = "^2.4.2"
pandas = "^3.0.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.1"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-mock = "^3.15.1"
aiosqlite = "^0.22.1"
asgi-lifespan = "^2.1.0"
pytest-env = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = [
    "tests/general_tests",
    "tests/integration_tests",
]
python_files = ["test_*.py", "*_test.py"]
markers = [
    "celery(sync=True): run celery tasks synchronously"
]

[tool.pytest_env]
ENV_FILE = "../.env"
