[tool.poetry]
name = "market-cli"
version = "0.1.0"
description = "CLI tool for market analytics"
authors = ["David Kedra <63604382+Darbix@users.noreply.github.com>"]

packages = [
    { include = "cli_tool" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
typer = {extras = ["all"], version = "^0.24.1"}
httpx = "^0.28.1"
requests = "^2.32.5"
pydantic-settings = "^2.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.poetry.scripts]
market-cli = "cli_tool.main:app"
